fixed spacing

--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -8,26 +8,17 @@
   height: 300px;
 }
 
-.avatar-body {
+.avatar {
   display: flex;
   width: 10%;
   justify-content: center;
-  margin: 15px;
-  background-color: cyan;
-}
-
-.avatar {
-  width: 100%;
-  height: 40%;
   padding: 15px;
-  margin-top: 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: cyan;
 }
 
 .post-body {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   width: 100%;
   /* height: 100%; */
   background-color: darkgoldenrod;
@@ -35,11 +26,9 @@
 }
 
 .post-header {
-  width: 100px;
-  height: 50px;
-  display: flex;
-  background-color: white;
-  margin-bottom: 10px;
+  height: 100%;
+  padding: 10px;
+  background-color: gray;
 }
 
 .post-body > img {
